package com.achigriveratipan.chatsockets.model;

public enum Status {
    JOIN,
    MESSAGE,
    LEAVE
}
